--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WTF: Webpack starter kit</title>
+    <title>Simple Editor</title>
     <meta name="description" content="Your project description" />
     <!-- Title -->
     <meta property="og:title" content="" />
@@ -17,7 +17,8 @@
       content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png"
     />
 
-    <!-- uncomment the line below to enable PWA  -->
+    <!-- un<img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
+      <span class="hello__circles"></span>comment the line below to enable PWA  -->
     <!-- <link rel="manifest" href="manifest.json" /> -->
 
     <link
@@ -65,9 +66,9 @@
     />
     <link
       rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1668-2224.png"
-      media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
+      href="pwa/apple-splash-1668-2224.png"<img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
+      <span class="hello__circles"></span>
+
     <link
       rel="apple-touch-startup-image"
       href="pwa/apple-splash-2224-1668.png"
@@ -145,9 +146,15 @@
     />
   </head>
   <body>
-    <div class="hello">
-      <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
-      <span class="hello__circles"></span>
-    </div>
+      <main class="editor">
+        <h1 class="editor__header">Simple Editor</h1>
+        <form class="form">
+          <textarea class="form__textarea textarea--js"></textarea>
+          <div class="form__buttons">
+            <button class="button load--js">Load</button>
+            <button class="button button--save save--js">Load</button>
+          </div>
+        </form>
+      </main>
   </body>
 </html>
